# python-plexapi

./: .coveragerc  .flake8  .gitignore  .readthedocs  .readthedocs.yml  .travis  .travis.yml  AUTHORS.txt  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  codecov.yml  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_doc.txt  setup.py  version_bump.py
docs/: Makefile  conf.py  configuration.rst  global.rst  index.rst  introduction.rst  modules.rst  settingslist.rst  toc.rst
examples/: examples.py  tests.py  utils.py
plexapi/: __init__.py  alert.py  audio.py  audio.py.orig  base.py  client.py  collection.py  compat.py  config.py  const.py  exceptions.py  gdm.py  library.py  library.py.orig  livetv.py  media.py  mixin.py  mixins.py  myplex.py  myplex.py.orig  notify.py  photo.py  playable.py  playlist.py  playqueue.py  providers.py  server.py  settings.py  sonos.py  streamurl.py  sync.py  together.py  utils.py  utils.py.orig  video.py
tests/: conftest.py  examples.py  find_attrs.py  man.py  payloads.py  runtests.py  test__prepare.py  test_actions.py  test_audio.py  test_client.py  test_collection.py  test_docs.py  test_fetch_items.py  test_gdm.py  test_history.py  test_library.py  test_misc.py  test_mixin.py  test_mixins.py  test_myplex.py  test_navigation.py  test_photo.py  test_playlist.py  test_playqueue.py  test_server.py  test_settings.py  test_sonos.py  test_sync.py  test_utils.py  test_video.py  (+2 more)
tests-old/: runtests.py  test_client.py  test_navigation.py  test_playlists.py  test_search.py  test_sync.py  utils.py
(+79 files in other folders)
