[project]
name = "PlexAPI"
authors = [
    { name = "Michael Shepanski", email = "michael.shepanski@gmail.com" }
]
description = "Python bindings for the Plex API."
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["plex", "api"]
license = {file = "LICENSE.txt"}
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
]
dependencies = ["requests"]
dynamic = ["version"]

[project.optional-dependencies]
alert = ["websocket-client>=1.3.3"]

[project.urls]
Homepage = "https://github.com/pkkid/python-plexapi"
Documentation = "https://python-plexapi.readthedocs.io"

[tool.setuptools.dynamic]
version = {attr = "plexapi.const.__version__"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "client: this is a client test.",
    "req_client: require a client to run this test.",
    "anonymously: test plexapi anonymously.",
    "authenticated: test plexapi authenticated.",
]
